# OptiChat

./: .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  connect_models.py  memory.py  pipeline.py  pipeline_functions.py
db/: __init__.py  database.py
ui/: __init__.py  help.py  layout.py  layout_assets.py  style.tcss
