[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optichat"
version = "0.1.1"
description = "An advanced terminal-based chat application built with Python and Textual."
readme = "Readme.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "OptiChat Contributors"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "textual-dev",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langgraph",
    "ollama",
    "chromadb",
    "sentence-transformers",
    "duckduckgo-search",
]

[project.scripts]
optichat = "main:launch"

[tool.setuptools]
packages = ["app", "db", "ui"]
py-modules = ["main"]

[tool.setuptools.package-data]
ui = ["*.tcss"]
